# uv_mixed_poetry_uv

./: README.md  autotest_config.json  dependency_tree.json  pyproject.toml
